@@ -186,7 +186,7 @@ _asn1_append_sequence_set(node_asn *node)
   *            value="FALSE" , len=1 -> boolean=FALSE
   *
   * \item OBJECT IDENTIFIER\: VALUE must be a null terminated string with each number separated by
-  *                      a blank (e.g. "1 2 3 543 1"). 
+  *                      a dot (e.g. "1.2.3.543.1"). 
   *                      LEN != 0
   *            value="1 2 840 10040 4 3" , len=1 -> OID=dsa-with-sha
   *
@@ -387,7 +387,7 @@ asn1_write_value(node_asn *node_root,const char *name,
     break;
   case TYPE_OBJECT_ID:
     for(k=0;k<strlen(value);k++)
-      if((!isdigit(value[k])) && (value[k]!=' ') && (value[k]!='+')) 
+      if((!isdigit(value[k])) && (value[k]!='.') && (value[k]!='+')) 
 	return ASN1_VALUE_NOT_VALID; 
     _asn1_set_value(node,value,strlen(value)+1);
     break;
@@ -554,7 +554,7 @@ asn1_write_value(node_asn *node_root,const char *name,
   * \item BOOLEAN\: VALUE will be the null terminated string "TRUE" or "FALSE" and LEN=5 or LEN=6
   *
   * \item OBJECT IDENTIFIER\: VALUE will be a null terminated string with each number separated by
-  *                      a blank (i.e. "1 2 3 543 1"). 
+  *                      a dot (i.e. "1.2.3.543.1"). 
   *                      LEN = strlen(VALUE)+1
   *
   * \item UTCTime\: VALUE will be a null terminated string in one of these formats\: 
@@ -640,11 +640,12 @@ asn1_read_value(node_asn *root,const char *name,unsigned char *value, int *len)
 	  if(value_size<1) return ASN1_MEM_ERROR;
 	  strcat(value,p->value); 
 	  if(p->right) {
-	    strcat(value," ");
+	    strcat(value,".");
 	  }
 	}
 	p=p->right;
       }
+      *len = strlen(value) + 1;
     } else {
       PUT_STR_VALUE(value, value_size, node->value);
     }
@@ -679,6 +680,104 @@ asn1_read_value(node_asn *root,const char *name,unsigned char *value, int *len)
   return ASN1_SUCCESS;
 }
 
+
+/**
+  * asn1_read_tag - Returns the TAG of one element inside a structure
+  * @root: pointer to a structure
+  * @name: the name of the element inside a structure.
+  * @tag:  variable that will contain the TAG value. 
+  * @class: variable that will specify the TAG type.
+  *
+  * Description:
+  *
+  * Returns the TAG and the CLASS of one element inside a structure.
+  * CLASS can have one of these constants: ASN1_CLASS_APPLICATION,
+  * ASN1_CLASS_UNIVERSAL, ASN1_CLASS_PRIVATE or ASN1_CLASS_CONTEXT_SPECIFIC.
+  * 
+  * Returns:
+  *
+  *   ASN1_SUCCESS\: set value OK
+  *
+  *   ASN1_ELEMENT_NOT_FOUND\: NAME is not a valid element.
+  * 
+  **/
+asn1_retCode 
+asn1_read_tag(node_asn *root,const char *name,int *tag, int *class)
+{
+  node_asn *node,*p,*pTag;
+ 
+  node=_asn1_find_node(root,name);
+  if(node==NULL) return  ASN1_ELEMENT_NOT_FOUND;
+
+  p=node->down;
+
+  /* pTag will points to the IMPLICIT TAG */
+  pTag=NULL;
+  if(node->type&CONST_TAG){
+    while(p){
+      if(type_field(p->type)==TYPE_TAG){
+	 if(p->type&CONST_IMPLICIT)
+	   pTag=p;
+	 else
+	   pTag=NULL;
+      }
+      p=p->right;
+    }
+  }
+
+  if(pTag){
+    *tag=strtoul(p->value,NULL,10);
+    /*
+    if(p->type&CONST_APPLICATION) *class=ASN1_CLASS_APPLICATION;
+    else if(p->type&CONST_UNIVERSAL) *class=ASN1_CLASS_UNIVERSAL;
+    else if(p->type&CONST_PRIVATE) *class=ASN1_CLASS_PRIVATE;
+    else *class=ASN1_CLASS_CONTEXT_SPECIFIC;
+    */
+  }
+  else{
+    /*
+    *class=ASN!_CLASS_UNIVERSAL;
+    switch(type_field(node->type)){
+    case TYPE_NULL:
+      *tag=ASN1_TAG_NULL;break;
+    case TYPE_BOOLEAN:
+      *tag=ASN1_TAG_BOOLEAN;break;
+    case TYPE_INTEGER:
+      *tag=ASN1_TAG_INTEGER;break;
+    case TYPE_ENUMERATED:
+      *tag=ASN1_TAG_ENUMERATED;break;
+    case TYPE_OBJECT_ID:
+      *tag=ASN1_TAG_OBJECT_ID;break;
+    case TYPE_TIME:
+      if(node->type&CONST_UTC){
+	*tag=ASN1_TAG_UTCTime;
+      }
+      else *tag=ASN1_TAG_GENERALIZEDTime;
+      break;
+    case TYPE_OCTET_STRING:
+      *tag=ASN1_TAG_OCTET_STRING;break;
+    case TYPE_GENERALSTRING:
+      *tag=ASN1_TAG_GENERALSTRING;break;
+    case TYPE_BIT_STRING:
+      *tag=ASN1_TAG_BIT_STRING;break;
+    case TYPE_SEQUENCE: case TYPE_SEQUENCE_OF:
+      *tag=ASN1_TAG_SEQUENCE;break;
+    case TYPE_SET: case TYPE_SET_OF:
+      *tag=ASN1_TAG_SET;break;
+    case TYPE_TAG:
+    case TYPE_CHOICE:
+    case TYPE_ANY:
+      break;
+    default:
+      break
+    }
+    */
+  }
+
+
+  return ASN1_SUCCESS;
+
+}
 
 
 
