@@ -38,7 +38,7 @@
 
 #define MAX_LOG_SIZE 1024 /* maximum number of characters of a log message */
 #define MAX_NAME_SIZE 128 /* maximum number of characters of a name inside an ASN1 file definitons */
-#define MAX_ERROR_DESCRIPTION_SIZE 1024 /* maximum number of characters of a description message */
+#define MAX_ERROR_DESCRIPTION_SIZE 128 /* maximum number of characters of a description message */
 
 
 /* define used for visiting trees */
